improve assessment, question bank, inference